--- a/templates/rezume.html
+++ b/templates/rezume.html
@@ -34,8 +34,8 @@
             </div>
         </div>
         <div class="col-4 mt-5">
-            <h2>Работодатель</h2>
-            <input type="text" class="form-control" id="employers" value="{{ employers|index:job.id }}">
+            <h2>Стаж в годах</h2>
+            <input type="text" class="form-control" id="expirience" value="{{ experience|index:job.id }}">
         </div>
         <div class="col-2"></div>
         {% endfor %}
